--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ release {
 
     git {
         requireBranch.set('')
-        pushToRemote.set('origin')
+//        pushToRemote.set('origin')
         commitVersionFileOnly.set(false)
     }
 }
